--- a/rankings.html
+++ b/rankings.html
@@ -99,7 +99,8 @@
 
       <div id="yr2018" class="tabcontent">
         <ol id="ranks18" class="ranks">
-          <li>Coming Soon...</li>
+          <li>The Exorcism of Emily Rose - 65.68</li>
+		  <li>The Purge - 63.33</li>
         </ol>
       </div>
 
@@ -127,6 +128,7 @@
 					<li>The Others - 67.5</li>
 					<li>The Babadook - 67</li>
 					<li>Wolf Creek 2 - 67</li>
+					<li>The Exorcism of Emily Rose - 65.68</li>
 					<li>The Exorcist - 66.5</li>
 					<li>A Nightmare on Elm Street - 65.34</li>
 					<li>Raw - 65</li>
@@ -134,6 +136,7 @@
 					<li>Psycho - 64</li>
 					<li>Evil Dead (2013) - 63.67</li>
 					<li>My Bloody Valentine - 63.5</li>
+					<li>The Purge - 63.33</li>
 					<li>Silence of the Lambs - 63</li>
 					<li>28 Days Later... - 63</li>
 					<li>Trick 'r Treat - 62.67</li>
