--- a/rankings.html
+++ b/rankings.html
@@ -26,7 +26,8 @@
 				<a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'yr2016')">2016</a>
 				<a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'yr2017')">2017</a>
         <a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'yr2018')">2018</a>
-        <a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'overall')" id="defaultOpen">Overall</a>
+        <a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'yr2021')" id="defaultOpen">2021</a>
+        <a href="javascript:void(0)" class="tablinks" onclick="openYear(event, 'overall')">Overall</a>
 			</div>
 
       <div id="yr2016" class="tabcontent">
@@ -100,7 +101,15 @@
       <div id="yr2018" class="tabcontent">
         <ol id="ranks18" class="ranks">
           <li>The Exorcism of Emily Rose - 65.68</li>
-		  <li>The Purge - 63.33</li>
+		      <li>The Purge - 63.33</li>
+        </ol>
+      </div>
+
+      <div id="yr2021" class="tabcontent">
+        <ol id="ranks21" class="ranks">
+          <li>Hereditary - 75.32</li>
+		      <li>A Quiet Place - 70</li>
+          <li>Relic - 67</li>
         </ol>
       </div>
 
@@ -108,6 +117,7 @@
 				<ol id="ranksoverall" class="ranks">
 					<li>Oculus - 78</li>
 					<li>Sinister - 75.5</li>
+          <li>Hereditary - 75.32</li>
 					<li>The Conjuring 2 - 75.3</li>
 					<li>The Conjuring - 75</li>
 					<li>IT - 74.67</li>
@@ -119,6 +129,7 @@
 					<li>[REC] - 71.3</li>
 					<li>Annabelle Creation - 70.67</li>
 					<li>Don't Breathe - 70.34</li>
+          <li>A Quiet Place - 70</li>
 					<li>Martyrs - 69.67</li>
 					<li>Ouja: Origin of Evil - 69.5</li>
 					<li>The Descent - 69</li>
@@ -128,6 +139,7 @@
 					<li>The Others - 67.5</li>
 					<li>The Babadook - 67</li>
 					<li>Wolf Creek 2 - 67</li>
+          <li>Relic - 67</li>
 					<li>The Exorcism of Emily Rose - 65.68</li>
 					<li>The Exorcist - 66.5</li>
 					<li>A Nightmare on Elm Street - 65.34</li>
