--- a/rankings.html
+++ b/rankings.html
@@ -108,6 +108,7 @@
       <div id="yr2021" class="tabcontent">
         <ol id="ranks21" class="ranks">
           <li>Hereditary - 75.32</li>
+          <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
         </ol>
@@ -128,6 +129,7 @@
 					<li>The Autopsy of Jane Doe - 72</li>
 					<li>[REC] - 71.3</li>
 					<li>Annabelle Creation - 70.67</li>
+          <li>The Loved Ones - 70.67</li>
 					<li>Don't Breathe - 70.34</li>
           <li>A Quiet Place - 70</li>
 					<li>Martyrs - 69.67</li>
