--- a/rankings.html
+++ b/rankings.html
@@ -107,16 +107,19 @@
 
       <div id="yr2021" class="tabcontent">
         <ol id="ranks21" class="ranks">
+          <li>Midsommar - 78.33</li>
           <li>Hereditary - 75.32</li>
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
+          <li>They Live - 57.67</li>
         </ol>
       </div>
 
       <div id="overall" class="tabcontent">
 				<ol id="ranksoverall" class="ranks">
-					<li>Oculus - 78</li>
+          <li>Midsommar - 78.33</li>
+          <li>Oculus - 78</li>
 					<li>Sinister - 75.5</li>
           <li>Hereditary - 75.32</li>
 					<li>The Conjuring 2 - 75.3</li>
@@ -170,6 +173,7 @@
 					<li>Cry_Wolf - 59</li>
 					<li>As Above, So Below - 58</li>
 					<li>Funny Games - 58</li>
+          <li>They Live - 57.67</li>
 					<li>Wolf Creek - 57</li>
 					<li>Hush - 57</li>
 					<li>It Follows - 55</li>
