--- a/rankings.html
+++ b/rankings.html
@@ -112,6 +112,7 @@
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
+          <li>Suspiria - 58</li>
           <li>They Live - 57.67</li>
         </ol>
       </div>
@@ -171,6 +172,7 @@
 					<li>Ghost Ship - 59.34</li>
 					<li>Child's Play - 59</li>
 					<li>Cry_Wolf - 59</li>
+          <li>Suspiria - 58</li>
 					<li>As Above, So Below - 58</li>
 					<li>Funny Games - 58</li>
           <li>They Live - 57.67</li>
