--- a/rankings.html
+++ b/rankings.html
@@ -109,6 +109,7 @@
         <ol id="ranks21" class="ranks">
           <li>Midsommar - 78.33</li>
           <li>Hereditary - 75.32</li>
+          <li>The Wicker Man - 70.67</li>
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
@@ -132,6 +133,7 @@
 					<li>Lights Out - 73</li>
 					<li>The Autopsy of Jane Doe - 72</li>
 					<li>[REC] - 71.3</li>
+          <li>The Wicker Man - 70.67</li>
 					<li>Annabelle Creation - 70.67</li>
           <li>The Loved Ones - 70.67</li>
 					<li>Don't Breathe - 70.34</li>
