--- a/voting.html
+++ b/voting.html
@@ -21,7 +21,7 @@
       <p>Did you love the movie? Did you hate it? Have your say!</p>
 
       <!-- Collects the name of the film -->
-      <form action="https://formspree.io/topghorror@gmail.com" method="POST">
+      <form action="https://formspree.io/f/xrgrpynk" method="POST">
         <div id="moviename">
           <label for="name">Movie Name:</label><br>
           <input type="text" name="name" required><br>
