--- a/rankings.html
+++ b/rankings.html
@@ -113,8 +113,10 @@
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
+          <li>Eraserhead - 58.67</li>
           <li>Suspiria - 58</li>
           <li>They Live - 57.67</li>
+          <li>Berberian Sound Studio - 55.33</li>
         </ol>
       </div>
 
@@ -174,12 +176,14 @@
 					<li>Ghost Ship - 59.34</li>
 					<li>Child's Play - 59</li>
 					<li>Cry_Wolf - 59</li>
+          <li>Eraserhead - 58.67</li>
           <li>Suspiria - 58</li>
 					<li>As Above, So Below - 58</li>
 					<li>Funny Games - 58</li>
           <li>They Live - 57.67</li>
 					<li>Wolf Creek - 57</li>
 					<li>Hush - 57</li>
+          <li>Berberian Sound Studio - 55.33</li>
 					<li>It Follows - 55</li>
 					<li>The Blair Witch Project - 55</li>
 					<li>Here Alone - 54.67</li>
