--- a/rankings.html
+++ b/rankings.html
@@ -113,6 +113,7 @@
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
           <li>Relic - 67</li>
+          <li>Hell House LLC - 61.67</li>
           <li>Eraserhead - 58.67</li>
           <li>Suspiria - 58</li>
           <li>They Live - 57.67</li>
@@ -167,6 +168,7 @@
 					<li>The Belko Experiment - 62.33</li>
 					<li>The Eye - 62.3</li>
 					<li>Get Out - 62</li>
+          <li>Hell House LLC - 61.67</li>
 					<li>Saw II - 61.5</li>
 					<li>The Omen - 61.33</li>
 					<li>Carrie - 61.25</li>
