--- a/rankings.html
+++ b/rankings.html
@@ -112,6 +112,7 @@
           <li>The Wicker Man - 70.67</li>
           <li>The Loved Ones - 70.67</li>
 		      <li>A Quiet Place - 70</li>
+          <li>The House That Jack Built - 69.67</li>
           <li>Relic - 67</li>
           <li>Hell House LLC - 61.67</li>
           <li>Eraserhead - 58.67</li>
@@ -142,6 +143,7 @@
 					<li>Don't Breathe - 70.34</li>
           <li>A Quiet Place - 70</li>
 					<li>Martyrs - 69.67</li>
+          <li>The House That Jack Built - 69.67</li>
 					<li>Ouja: Origin of Evil - 69.5</li>
 					<li>The Descent - 69</li>
 					<li>Gerald's Game - 69</li>
