--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
 
     <h1>
-        <a href="Prime/index.html">
+        <a href="Prime/index.html">Liberty Prime Soundboard</a>
     </h1>
 
 </body>
